appId: com.fabiofiorita.porcelain.dev
name: Reload changed file text
---
- tapOn: Reload file
- assertVisible: '(?s).*Reloaded from disk.*'
- assertNotVisible: '(?s).*Olá 🌿.*'
